# gpui-form

./: Cargo.toml  Justfile  README.md
crates/gpui-form/: Cargo.toml
crates/gpui-form-core/: Cargo.toml
crates/gpui-form-core/src/: components.rs  lib.rs  names.rs  registry.rs
crates/gpui-form-core/src/implementations/: checkbox.rs  custom.rs  date_picker.rs  dropdown.rs  input.rs  mod.rs  number_input.rs  switch.rs
crates/gpui-form-core/src/implementations/__crate_paths/: gpui.rs  gpui_component.rs
crates/gpui-form-derive/: Cargo.toml
crates/gpui-form-derive/src/: lib.rs
crates/gpui-form-derive/src/derives/: dropdown_item.rs  gpui_form.rs  mod.rs
crates/gpui-form-internal-macros/: Cargo.toml
crates/gpui-form-internal-macros/src/: lib.rs
crates/gpui-form-prototyping-core/: Cargo.toml  README.md
crates/gpui-form-prototyping-core/src/: code_gen.rs  lib.rs
crates/gpui-form-prototyping-core/src/implementations/: checkbox.rs  date_picker.rs  dropdown.rs  input.rs  mod.rs  number_input.rs  switch.rs
crates/gpui-form/src/: lib.rs
crates/num-regex/: Cargo.toml
crates/num-regex/src/: lib.rs
crates/story-container/: Cargo.toml
crates/story-container-core/: Cargo.toml
crates/story-container-core/src/: gallery.rs  lib.rs  registry.rs
crates/story-container-macros/: Cargo.toml
crates/story-container-macros/src/: lib.rs
crates/story-container/src/: lib.rs
crates/story-container/src/story/: components.rs
crates/story-container/src/title_bar/: mod.rs
examples/: README.md
examples/i18n/en/: some-lib.ftl  some_lib.ftl
examples/i18n/fr/: some-lib.ftl  some_lib.ftl
examples/i18n/zh-CN/: some-lib.ftl  some_lib.ftl
examples/prototyping/: Cargo.toml
examples/prototyping/output/: address.rs  user.rs
examples/prototyping/src/: main.rs
examples/some-lib/: Cargo.toml  i18n.toml
examples/some-lib-forms/: Cargo.toml
examples/some-lib-forms/src/: i18n.rs  lib.rs  main.rs
examples/some-lib-forms/src/forms/: address.rs  mod.rs  user.rs
examples/some-lib/src/: i18n.rs
examples/some-lib/src/structs/: address.rs  user.rs
