[package]
name = "story-container-core"
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
i18n-embed = { features = [ "fluent-system", "desktop-requester" ], workspace = true }
i18n-embed-fl = { workspace = true }
i18n-manager = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rust-embed = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { features = [ "env-filter" ], workspace = true }

[lints]
workspace = true
