[package]
name = "story-container-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
inventory = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
story-container-core = { path = "../story-container-core" }
syn = { features = [ "full" ], workspace = true }

[lints]
workspace = true
