[package]
name = "story-container"
version = "0.1.0"
edition.workspace = true
publish = false
license-file = "LICENSE-APACHE"

[features]
default = [  ]
macros = [ "dep:story-container-macros" ]

[dependencies]
anyhow = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
i18n-embed = { features = [ "fluent-system", "desktop-requester" ], workspace = true }
i18n-embed-fl = { workspace = true }
i18n-manager = { workspace = true }
rust-embed = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
serde_json = { workspace = true }
story-container-macros = { optional = true, path = "../story-container-macros" }
tracing-subscriber = { features = [ "env-filter" ], workspace = true }

[lints]
workspace = true
