[package]
name = "prototyping"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
gpui-form = { features = [ "inventory" ], workspace = true }
gpui-form-prototyping-core = { workspace = true }
heck = { workspace = true }
inventory = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
some-lib = { path = "../some-lib" }
syn = { features = [ "full", "parsing" ], workspace = true }

[lints]
workspace = true
