[package]
name = "some-lib-forms"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false


[dependencies]
automod = { workspace = true }
chrono = { workspace = true }
es-fluent = { workspace = true }
garde = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-form = { features = [ "derive" ], workspace = true }
paste = { workspace = true }
rust_decimal = { workspace = true }
some-lib = { path = "../some-lib" }
story-container = { features = [ "macros" ], path = "../../crates/story-container" }
unwrapped = { workspace = true }

[lints]
workspace = true
