[package]
name = "some-lib-forms"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false


[dependencies]
es-fluent-manager-embedded = { workspace = true }
automod = { workspace = true }
chrono = { workspace = true }
es-fluent = { workspace = true }
garde = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-form = { features = [ "derive" ], workspace = true }
gpui-storybook = { features = [ "macros" ], workspace = true }
inventory = { workspace = true }
paste = { workspace = true }
rust_decimal = { workspace = true }
some-lib = { path = "../some-lib" }
unwrapped = { workspace = true }
unic-langid = { workspace = true }

[lints]
workspace = true
