[package]
name = "some-lib-forms"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false


[dependencies]
automod = { workspace = true }
chrono = { workspace = true }
es-fluent = { workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
garde = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-form = { features = [ "derive" ], workspace = true }
gpui-storybook = { features = [ "macros" ], workspace = true }
inventory = { workspace = true }
paste = { workspace = true }
rust-embed = { workspace = true }
rust_decimal = { workspace = true }
some-lib = { path = "../some-lib" }
strum = { workspace = true }
unic-langid = { workspace = true }
unwrapped = { workspace = true }

[lints]
workspace = true
