[package]
name = "some-lib"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
es-fluent = { features = [ "derive" ], workspace = true }
garde = { features = [ "derive", "email", "rust_decimal" ], workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-form = { features = [ "rust_decimal" ], workspace = true }
i18n-embed = { features = [ "fluent-system", "desktop-requester" ], workspace = true }
i18n-embed-fl = { workspace = true }
i18n-manager = { workspace = true }
inventory = { workspace = true }
rust-embed = { workspace = true }
rust_decimal = { workspace = true }
story-container = { features = [ "macros" ], path = "../../crates/story-container" }
strum = { workspace = true }
unwrapped = { workspace = true }

[build-dependencies]
es-fluent-build = { workspace = true }

[lints]
workspace = true
